--- a/src/css/components/modalPage.scss
+++ b/src/css/components/modalPage.scss
@@ -94,7 +94,7 @@
     width: 312px;
 }
 
-.form__button-submit:disabled {
+.prime__button:disabled {
     border: 1px solid #9FA7B0;
     background: #9FA7B0;
     width: 312px;
