--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -2,5 +2,9 @@
 @import './components/index.scss';
 @import './components/common.scss';
 @import './components/footer.scss';
-@import './components//modalPage.scss';
+@import './components/modalPage.scss';
+@import './components/services.scss';
+@import './components/mixins.scss';
+@import './components/breadCrumbs.scss';
+@import './components/consultationForm.scss';
 @import './components/fonts/_lato.scss';
