--- a/src/css/components/index.scss
+++ b/src/css/components/index.scss
@@ -99,6 +99,7 @@
 }
 
 #services {
+    margin-bottom: 99px;
     .services__inner {
         background: url("../../assets/img/bg-line3.png");
         background-repeat: no-repeat;
@@ -135,8 +136,10 @@
             grid-column-end: 2;
             grid-row-start: 1;
             grid-row-end: 3;
-
+            margin: 0;
             img {
+                width: 75px;
+                height: auto;
                 margin-bottom: 32px;
             }
         }
