--- a/src/css/components/services.scss
+++ b/src/css/components/services.scss
@@ -16,7 +16,10 @@
             top: 0px;
             z-index: -1;
         }
-
+        ul{
+            list-style-position: outside;
+            margin-left: 42px;
+        }
         .services-page__title {
             font-family: 'Montserrat';
             font-style: normal;
@@ -30,7 +33,7 @@
 
     .service__description {
         margin-top: 70px;
-
+        margin-bottom: 95px;
         .title {
             font-family: 'Montserrat';
             font-style: normal;
