--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -7,4 +7,6 @@
 @import './components/mixins.scss';
 @import './components/breadCrumbs.scss';
 @import './components/consultationForm.scss';
+@import './components/training.scss';
+@import './components/aboutTraining.scss';
 @import './components/fonts/_lato.scss';
