--- a/src/pug/mixins/plan.pug
+++ b/src/pug/mixins/plan.pug
@@ -1,4 +1,4 @@
 mixin plan(title)
-    .col-7.plan.d-flex.align-items-center
+    .plan.d-flex.align-items-center
         img(src="../../assets/img/icons/logo2.svg", alt="icon")
         p #{title}
