--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -14,7 +14,7 @@ block content
                 img.col-5.cube__img(src="../assets/img/cube.png", alt="cube")
     .articles
         .container-md
-            .articles__cards
+            .articles__cards.row
                 each val in articles
                     +article(val)
     section#services
