--- a/src/css/components/consultationForm.scss
+++ b/src/css/components/consultationForm.scss
@@ -1,5 +1,4 @@
 .consultation {
-    margin-top: 95px;
     padding: 69px 0px 38px 0px;
     position: relative;
     .small{
@@ -32,8 +31,7 @@
         width: 643px;
         background-color: #FFFFFF;
         border-radius: 20px;
-        box-shadow: 0 0 0 2px rgb(255, 255, 255),
-            0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+        box-shadow: 4px 4px 20px rgba(40, 44, 55, 0.2);
         input,button{
             width: 100%;
             border: 1px solid #9FA7B0;
