--- a/src/css/components/mixins.scss
+++ b/src/css/components/mixins.scss
@@ -4,7 +4,7 @@
     img {
         width: 23px;
         height: auto;
-        margin: 0 41px 0 42px;
+        margin-right: 42px;
     }
 
     P {
@@ -32,13 +32,61 @@
         font-size: 17px;
         line-height: 20px;
         color: #282C37;
-        // &::before{
-        //     content: "";
-        //     position: absolute;
-        //     border-radius: 50%;
-        //     width: 11px;
-        //     height: 11px;
-        //     background-color: #A5CBF9;            
-        // }
+
+    }
+}
+
+.training__card {
+    box-shadow: 4px 4px 20px rgba(40, 44, 55, 0.2);
+    margin-bottom: 40px;
+    padding: 39px 0px;
+    border-radius: 20px;
+    background-color: #FFFFFF;
+
+    .training__inform {
+        padding: 0px 38px;
+
+        .title {
+            font-family: 'Montserrat';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 30px;
+            line-height: 37px;
+            color: #282C37;
+            margin-bottom: 32px;
+        }
+
+        p {
+            font-family: 'Lato';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 18px;
+            line-height: 22px;
+            color: #282C37;
+            margin-bottom: 5px;
+        }
+
+        .training__button {
+            margin-top: 31px;
+            padding: 14px 25px 14px 23px;
+            font-family: 'Montserrat';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 16px;
+            line-height: 20px;
+            text-transform: uppercase;
+            background: #287EE7;
+            border-radius: 8px;
+            border: 0px;
+            color: #FFFFFF;
+            transition: 0.2s;
+            svg {
+                margin-left: 50px;
+            }
+
+            &:hover {
+                background: #4B9AFB;
+            }
+        }
     }
 }
