--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -9,4 +9,8 @@
 @import './components/consultationForm.scss';
 @import './components/training.scss';
 @import './components/aboutTraining.scss';
+@import './components/trainingCard.scss';
 @import './components/fonts/_lato.scss';
+
+
+@import './adaptive/mainOfAdaptive.scss';
