--- a/src/css/components/mixins.scss
+++ b/src/css/components/mixins.scss
@@ -1,14 +1,13 @@
-.plan {
-    margin-top: 12px;
+.plans {
+    margin-top: 9.5px;
 
-    img {
-        width: 23px;
-        height: auto;
-        margin-right: 42px;
-    }
-
-    P {
-        font-family: 'Roboto';
+    p {
+        background: url(../../assets/img/icons/logo3.svg);
+        margin-left: 42px;
+        background-repeat: no-repeat;
+        background-position: left 0 top 0;
+        padding: 2.5px 0px 2.5px 65px;
+        font-family: 'Lato';
         font-style: normal;
         font-weight: 400;
         font-size: 17px;
@@ -23,6 +22,7 @@
 
 .stage {
     margin-bottom: 17px;
+
     li {
         list-style: square url(../../assets/img/icons/Ellipse.svg);
         padding-left: 15px;
@@ -32,61 +32,19 @@
         font-size: 17px;
         line-height: 20px;
         color: #282C37;
-
+        margin: 0px;
     }
 }
 
-.training__card {
-    box-shadow: 4px 4px 20px rgba(40, 44, 55, 0.2);
-    margin-bottom: 40px;
-    padding: 39px 0px;
-    border-radius: 20px;
-    background-color: #FFFFFF;
-
-    .training__inform {
-        padding: 0px 38px;
-
-        .title {
-            font-family: 'Montserrat';
-            font-style: normal;
-            font-weight: 700;
-            font-size: 30px;
-            line-height: 37px;
-            color: #282C37;
-            margin-bottom: 32px;
-        }
+@media(max-width: 576px) {
+    .plans {
+        margin-top: 9.5px;
 
         p {
-            font-family: 'Lato';
-            font-style: normal;
-            font-weight: 400;
-            font-size: 18px;
-            line-height: 22px;
-            color: #282C37;
-            margin-bottom: 5px;
-        }
-
-        .training__button {
-            margin-top: 31px;
-            padding: 14px 25px 14px 23px;
-            font-family: 'Montserrat';
-            font-style: normal;
-            font-weight: 700;
+            margin-left: 0px;
+            padding: 2.5px 0px 2.5px 40px;
             font-size: 16px;
-            line-height: 20px;
-            text-transform: uppercase;
-            background: #287EE7;
-            border-radius: 8px;
-            border: 0px;
-            color: #FFFFFF;
-            transition: 0.2s;
-            svg {
-                margin-left: 50px;
-            }
-
-            &:hover {
-                background: #4B9AFB;
-            }
         }
     }
+
 }
