--- a/src/pug/mixins/plan.pug
+++ b/src/pug/mixins/plan.pug
@@ -1,4 +1,4 @@
 mixin plan(title)
-    .plan.d-flex.align-items-center
-        img(src="../../assets/img/icons/logo2.svg", alt="icon")
+    .plans.d-flex.align-items-center
+        //- img(src="../../assets/img/icons/logo2.svg", alt="icon")
         p #{title}
