--- a/src/css/adaptive/mainOfAdaptive.scss
+++ b/src/css/adaptive/mainOfAdaptive.scss
@@ -2,4 +2,5 @@
 @import "./services.scss";
 @import "./consultationForm.scss";
 @import "./trainingCard.scss";
-@import "./aboutTraining.scss"
+@import "./aboutTraining.scss";
+@import "./modalPage.scss";
