--- a/src/pug/includes/header.pug
+++ b/src/pug/includes/header.pug
@@ -22,11 +22,11 @@ section#header
         img(src="./assets/img/icons/logo.svg", alt="logo")
       nav.menu.d-flex.justify-content-between.col-8.align-items-center
         +links
-      button.burger.d-md-none
+      button.burger.d-lg-none
         span
         span
         span
-      .mobail-menu.d-md-none
+      .mobail-menu.d-lg-none
         .container
           img.mobail-menu__close(src="../../assets/img/icons/close.svg")
           .mobail-menu__inner
