--- a/src/css/components/modalPage.scss
+++ b/src/css/components/modalPage.scss
@@ -22,11 +22,11 @@
 .modal-page__item {
     display: flex;
     align-items: center;
+    width: 100%;
     height: 758px;
 }
 
 .modal-page__form {
-    display: flex;
     flex-direction: column;
     align-items: center;
     padding: 0px 70px 0px 70px;
@@ -53,7 +53,7 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #282C37;
-    margin-bottom: 34px;
+    margin: 0 auto 34px auto;
 }
 
 .name,
@@ -115,6 +115,7 @@
 }
 
 .successfully {
+    margin: 0 auto;
     font-family: 'Lato';
     font-style: normal;
     font-weight: 700;
