refactoring after html validator

--- a/src/pug/pages/services.pug
+++ b/src/pug/pages/services.pug
@@ -15,7 +15,7 @@ block content
                         a(href='./services.html') Услуги
                     li.breadcrumb-item.active(aria-current='page') Разрабатываем маркетинг-план: дорожная карта достижения целей
             .service-page__inner
-                img.bg-pol(src="../../assets/img/Polygon 2.png", alt="")
+                img.bg-pol(src="../../assets/img/Polygon 2.png", alt="gb")
                 h2.services-page__title Разрабатываем маркетинг-план: дорожная карта достижения целей
                 .col-md-7.col-12
                     each val in servicePlan
