--- a/src/pug/pages/training.pug
+++ b/src/pug/pages/training.pug
@@ -11,6 +11,6 @@ block content
                     li.breadcrumb-item.active(aria-current='page') Тренинги
 
             .training__inner
-                img.bg-pol(src="../../assets/img/Polygon 2.png", alt="")
+                img.bg-pol(src="../../assets/img/Polygon 2.png", alt="gb")
                 each val in trainings
                     +trainingCard(val)
