--- a/src/pug/pages/aboutTraining.pug
+++ b/src/pug/pages/aboutTraining.pug
@@ -13,7 +13,7 @@ block content
                         a(href='./services.html') Тренинги
                     li.breadcrumb-item.active(aria-current='page') Бизнес-тренинг «Маркетинг – технология роста»
             .about-training__inner
-                img.bg-pol(src="../../assets/img/Polygon 2.png", alt="")
+                img.bg-pol(src="../../assets/img/Polygon 2.png", alt="bg")
                 h2.about-training__title.col-12 Бизнес-тренинг «Маркетинг – технология роста»
                 p Для кого: руководители компаний, маркетологи, продавцы
                 p Цели бизнес-тренинга:
