--- a/src/pug/includes/header.pug
+++ b/src/pug/includes/header.pug
@@ -16,7 +16,7 @@ mixin links
   
 
 header#header
-  .container-md
+  .container
     div.d-flex.justify-content-between.align-items-center
       a.logo(href="./")
         img(src="./assets/img/icons/logo.svg", alt="logo")
